# backend/swagger/swagger.yaml
@@ -366,7 +366,7 @@ paths:
       post:
         summary: Purchase all items in Cart
         tags:
-          - purchase
+          - user-purchase
         description: Purchase all items in Cart of a user. Checks stock, lowers stock, copy cart to purchase history and purges cart.
         responses:
           '201':
@@ -390,7 +390,7 @@ paths:
       get:
         summary: Get all purchases for the current user
         tags:
-          - purchase
+          - user-purchase
         description: Get all purchases from the Database for the current user.
         responses:
           '200':
@@ -414,7 +414,7 @@ paths:
       delete:
         summary: Delete all purchases for the current user
         tags:
-          - purchase
+          - user-purchase
         description: Delete all purchases from the Database for the current user.
         responses:
           '204':
@@ -436,6 +436,34 @@ paths:
                 schema:
                   $ref: '#/components/schemas/Method_not_allowed'
 
+    ## user_sales.py
+    /v1/user/sales/{user_id}:
+      get:
+        summary: Get all sales for a user
+        tags:
+          - user-sales
+        description: Get all sales from the Database for a user.
+        parameters:
+          - name: user_id
+            in: path
+            description: ID of the other user
+            required: true
+            schema:
+              type: integer
+        responses:
+          '200':
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/purchase'
+          '403':
+            description: no login
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/No_login'
+    
     ## user_reviews.py
     /v1/user/reviews:
       post:
@@ -832,6 +860,9 @@ components:
           type: integer
           example: 3
           required: false
+        verkaeufer_id:
+          type: integer
+          example: 5
         kaupreis:
           type: float
           example: 10.99
@@ -941,10 +972,10 @@ tags:
     description: Shopping cart.
   - name: user-review
     description: Reviews of articles.
+  - name: user-purchase
+    description: Add, Get or Delte purchases.
   - name: system
     description: System status querys.
-  - name: purchase
-    description: Add, Get or Delte purchases.
   - name: user
     description: Everything user related.
   - name: user-login
